--- a/TinyEJB/pom.xml
+++ b/TinyEJB/pom.xml
@@ -29,6 +29,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<version>1.1.2</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jdom</groupId>
 			<artifactId>jdom-legacy</artifactId>
 			<version>1.1.3</version>
