--- a/TinyEJB/pom.xml
+++ b/TinyEJB/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.tinyejb</groupId>
 	<artifactId>tinyejb</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.1</version>
 	<packaging>jar</packaging>
 
 	<name>TinyEJB</name>
